IMP: revert and use relative to avoid overlap

--- a/Magento_MediaGalleryUi/web/css/source/_extend.less
+++ b/Magento_MediaGalleryUi/web/css/source/_extend.less
@@ -268,6 +268,13 @@
     }
     
     .admin__data-grid-header {
+        position: relative;
+
+        .data-grid-search-control-wrap {
+            position: absolute;
+            top: 0;
+        }
+
         .masonry-image-sortby {
             position: relative;
             background-color: @neutral-95;
